get user list doesn't require authentication
