# backend/web/docs/swagger.yaml
@@ -1184,48 +1184,6 @@ paths:
       summary: Get all tutor List
       tags:
       - Admin
-  /v1/admin/get/user/list:
-    get:
-      consumes:
-      - application/json
-      description: '注意 header  Authorization: Bearer <token>, 返回所有用户列表， 注意 users 表格里面有
-        Role 字段（int）， 1表示student, 2表示tutor, 3表示client, 4表示convenor, 5表示admin'
-      parameters:
-      - description: Bearer <token>
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/response.UserListResponse'
-            type: array
-        "401":
-          description: '{"error": "Please login"}'
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "403":
-          description: '{"error": "only admin have permission"}'
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: '{"error": "Failed to fetch users"}'
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Get all users List
-      tags:
-      - Admin
   /v1/admin/modify/user/role:
     post:
       consumes:
@@ -3062,6 +3020,48 @@ paths:
       summary: Reset password (send email)
       tags:
       - Personal Management
+  /v1/user/get/user/list:
+    get:
+      consumes:
+      - application/json
+      description: Role field（int）， 1 represent student, 2 represent tutor, 3 represent
+        client, 4 represent convenor, 5 represent admin
+      parameters:
+      - description: Bearer <token>
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/response.UserListResponse'
+            type: array
+        "401":
+          description: '{"error": "Please login"}'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "403":
+          description: '{"error": "only admin have permission"}'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: '{"error": "Failed to fetch users"}'
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get all users List
+      tags:
+      - User
   /v1/user/modify/profile:
     post:
       consumes:
